[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tile.gd" type="Script" id=1]
[ext_resource path="res://img/explosion.svg" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="Tile" type="MarginContainer"]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bomb" type="MarginContainer" parent="."]
editor/display_folded = true
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BombIcon" type="TextureRect" parent="Bomb"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="ProxLabel" type="Label" parent="."]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Flag" type="Polygon2D" parent="."]
visible = false
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( 10, 0, 20, 10, 10, 20, 0, 10 )
[connection signal="gui_input" from="Button" to="." method="_on_Button_right_click"]
[connection signal="pressed" from="Button" to="." method="_on_Button_left_click"]
